[FIX] web_responsive: Do not set overflow property on inline fields Co-authored-by: Alexandre Díaz <alexandre.diaz@tecnativa.com> Ensure that the title is displayed while the user holds the mouse click (while selecting content)

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -397,14 +397,17 @@ html .o_web_client .o_main .o_main_content {
         // Support for long title (with ellipsis)
         .oe_title {
             span.o_field_widget {
-                max-width: 100%;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-                width: initial;
-            }
-            span:active {
-                white-space: normal;
+                &:not(.oe_inline) {
+                    max-width: 100%;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    width: initial;
+                    
+                    &:active {
+                        white-space: normal;
+                    }
+                }
             }
         }
 
